# priceapp

./: .gitignore  README.md  price.bat  pyproject.toml  requirememnts.txt  requirements.txt
djangoProject/: settings.py  urls.py
priceapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
priceapp/migrations/: 0001_initial.py  0002_category.py  0003_product.py  0004_product_country.py  0005_product_category.py  0006_tag.py  0007_printsheet.py  0008_printsheet_country.py  0009_printsheet_category.py  0010_printsheet_tag.py  0011_updateproduct.py  0012_missingproduct.py  0013_missingproduct_country.py  0014_missingproduct_category.py  0015_alter_product_sku.py  0016_alter_missingproduct_sku_alter_product_sku.py  0017_alter_missingproduct_ean_alter_product_ean.py  0018_rename_product_printsheet_name.py  0019_alter_printsheet_category_alter_printsheet_country.py  0020_alter_product_ean_alter_product_name_and_more.py
static/: package-lock.json  product_update.csv
static/assets/css/: basic.css  extra.css  fonts.css
static/assets/js/: scripts.js
templates/priceapp/: base.html  big_sale_tags.html  big_tags.html  missingproduct_form.html  print_tags.html  printsheet_form.html  product_confirm_update.html  product_form.html  product_icq_update.html  product_update.html  product_update_instruction.html  small_sale_tags.html  small_tags.html
