[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["Тимофей Боровец <t.m.borovets@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.2"
django-widget-tweaks = "^1.4.12"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
gunicorn = "^20.1.0"
mccabe = "^0.7.0"
pycodestyle = "^2.10.0"
pydocstyle = "^6.3.0"
pyflakes = "^3.0.1"
snowballstemmer = "^2.2.0"
sqlparse = "^0.4.4"
typing-extensions = "4.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
